--- a/css/transferencia.css
+++ b/css/transferencia.css
@@ -209,6 +209,17 @@ select {
     font-weight: 300;
 }
 
+.error-message {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+
 /* Responsividade */
 @media (max-width: 768px) {
     .container {
