--- a/css/historico-transferenciass.css
+++ b/css/historico-transferenciass.css
@@ -83,6 +83,48 @@ body {
     font-size: 2em;
 }
 
+.error-message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semitransparente */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.error-popup {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 400px;
+    width: 100%;  /* Garante que a largura se ajuste de maneira responsiva */
+    text-align: center;
+    position: relative;
+    max-height: 80%; /* Impede que o pop-up ultrapasse a altura da tela */
+    overflow-y: auto; /* Se necessário, habilita rolagem */
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    background: none;
+    border: none;
+    color: #333;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    color: red;
+}
+
+
+
 .filter-options {
     margin: 20px 0;
     text-align: right;
