--- a/css/login-geral.css
+++ b/css/login-geral.css
@@ -3,7 +3,54 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh; /* Garante que o body ocupe 100% da altura da janela */
+    font-family: 'Roboto', sans-serif; /* Adiciona uma fonte sem serifa */
 }
+
+/* A seguir, a definição de outras regras CSS permanece inalterada */
+/* O Modal */
+.modal {
+    display: none; /* Esconde o modal por padrão */
+    position: fixed;
+    z-index: 1; /* Fica sobre o conteúdo */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); /* Fundo semitransparente */
+    justify-content: center;
+    align-items: center;
+}
+
+/* O conteúdo do Modal */
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+/* O botão de fechar */
+.close {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-family: sans-serif;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 main {
     background: white;
