--- a/css/adm-historico-transferencias.css
+++ b/css/adm-historico-transferencias.css
@@ -96,6 +96,24 @@ h1 {
 }
 
 
+.btn-submit {
+    padding: 12px 24px;
+    border: 3px solid #FFA114;
+    border-radius: 2rem;
+    background: #FFA114;
+    font-weight: 700;
+    font-size: 1rem;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.btn-submit:hover {
+    background-color: #FF8C00; /* Cor de fundo ao passar o mouse */
+    transform: scale(1.05); /* Efeito de aumento ao passar o mouse */
+}
+
+
 /* Responsividade */
 @media (max-width: 768px) {
     .container {
@@ -114,3 +132,5 @@ h1 {
         font-size: 1rem;
     }
 }
+
+
